style(gameMenu): fix click through problems on small screens

--- a/source/ui/directives/gameMenu.less
+++ b/source/ui/directives/gameMenu.less
@@ -1,9 +1,8 @@
 
 .game-menu {
   position: fixed;
-  top: 0;
-  left: 0;
-  height:100%;
+  top: 5px;
+  left: 5px;
   z-index: 10;
   .options, .trigger {
     font-size: 42px;
@@ -13,7 +12,6 @@
     position: static;
     top: 0;
     left:0;
-    margin:1em;
 
   }
   a {
